--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nuxt": "^2.15.3"
   },
   "devDependencies": {
+    "@nuxt/content": "^1.14.0",
     "@nuxt/types": "^2.15.3",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/tailwindcss": "^4.0.1",
