--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@nuxt/types": "^2.15.3",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/tailwindcss": "^4.0.1",
+    "autoprefixer": "^10.2.5",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "postcss": "^8.2.8",
+    "postcss-import": "^14.0.2",
+    "postcss-nested": "^5.0.5",
     "prettier": "^2.2.1"
   }
 }
