set phosphor icons

--- a/content/01_sectionWelcome.yaml
+++ b/content/01_sectionWelcome.yaml
@@ -5,7 +5,7 @@ title: Sección
 menuTitle: Inicio
 
 data:
-  title: Hendrerit facilisi magna est massa tempus consequat neque lacinia quis.\n Sed pellentesque sit vulputate quisque amet tortor.
+  title: Facilisi magna est massa tempus consequat neque lacinia quis.\n Sed pellentesque sit vulputate quisque amet tortor.
   mainText:
     - Nisi enim ac faucibus lacus. Mi felis tellus viverra turpis vitae velit eget suspendisse ut. Laoreet scelerisque leo sollicitudin quam. Tristique nec cursus facilisi vitae sit at.
     - Neque commodo maecenas risus sed. Convallis magna non amet pretium faucibus diam. Mauris ipsum egestas eget sollicitudin dictum mi magnis diam. Tortor, ac duis aliquam eu cursus.
