--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "phosphor-vue": "^1.2.1"
   },
   "devDependencies": {
+    "@aceforth/nuxt-optimized-images": "^1.4.0",
     "@nuxt/content": "^1.14.0",
     "@nuxt/types": "^2.15.3",
     "@nuxt/typescript-build": "^2.1.0",
