optimize background image to light testing

--- a/content/01_sectionWelcome.yaml
+++ b/content/01_sectionWelcome.yaml
@@ -15,7 +15,7 @@ data:
     - Egestas gravida metus egestas eros, scelerisque tincidunt non. Amet commodo id turpis duis mauris. Velit odio nulla ipsum eu dui gravida ac volutpat faucibus. Tristique urna, nunc sit congue. Et imperdiet sagittis mi suscipit ultrices interdum massa lectus.
 
 assets:
-  backgroundIllustration: /img/000010 1.png
+  backgroundIllustration: /img/000010 1.webp
   logos:
     - /img/placeholder_logo.png
     - /img/placeholder_logo.png
