--- a/content/03_sectionExplorers.yaml
+++ b/content/03_sectionExplorers.yaml
@@ -5,7 +5,8 @@ title: Sección
 menuTitle: Los exploradores son las nuevas máquinas
 
 data:
-  - position: 
+  - title: "jelow..."
+    position: 
       lon: 2
       lat: 5
   - position: 
