--- a/content/03_sectionExplorers.yaml
+++ b/content/03_sectionExplorers.yaml
@@ -8,7 +8,8 @@ assets:
   
 data:
 
-  - 
+  - # 0 - MARS 3 (Módulo de descenso y Rover)
+    id: 0
     title: "MARS 3 (Módulo de descenso y Rover)"
     subtitle: "Primer amartizaje controlado."
     meta: 
@@ -31,40 +32,170 @@ data:
     contribution: ""
     picture: ""
 
-
-  - title: "jarl"
-    year: 1976 
+  - # 1 - MARS 3 (Módulo de descenso y Rover)
+    id: 1
+    title: "MARS 3 (Módulo de descenso y Rover)"
+    subtitle: "Primer amartizaje controlado."
+    meta: 
+      launch: "28.03.1973 - 15:26 UTC"
+      arrival: "02.12.1971 - 13.50 UTC"
+      place: "Cráter Ptolomeo (Terra Sirenum)"
+      activity: "2 minutos (Orbitador 452 días)"
+      land: "Unión Soviética"
+      agency: "USSR"
+      status: "Exito parcial"
     position: 
       lon: 20
       lat: 30
-  - title: "jarl"
-    year: 1976 
+    goals: "
+      Realizar un amartizaje suave en Marte
+      Devolver fotografías de la superficie
+      Enviar datos de las condiciones meteorológicas, de la composición atmosférica y de las propiedades mecánicas y químicas del suelo."
+    instruments: "" 
+    curiosities: ""
+    contribution: ""
+    picture: ""
+
+  - # 2 - MARS 3 (Módulo de descenso y Rover)
+    id: 2
+    title: "MARS 3 (Módulo de descenso y Rover)"
+    subtitle: "Primer amartizaje controlado."
+    meta: 
+      launch: "28.03.1975 - 15:26 UTC"
+      arrival: "02.12.1971 - 13.50 UTC"
+      place: "Cráter Ptolomeo (Terra Sirenum)"
+      activity: "2 minutos (Orbitador 452 días)"
+      land: "Unión Soviética"
+      agency: "USSR"
+      status: "Exito parcial"
     position: 
       lon: 32
       lat: 43
-  - title: "jarl"
-    year: 1976 
+    goals: "
+      Realizar un amartizaje suave en Marte
+      Devolver fotografías de la superficie
+      Enviar datos de las condiciones meteorológicas, de la composición atmosférica y de las propiedades mecánicas y químicas del suelo."
+    instruments: "" 
+    curiosities: ""
+    contribution: ""
+    picture: ""
+
+  - # 3 - MARS 3 (Módulo de descenso y Rover)
+    id: 3
+    title: "MARS 3 (Módulo de descenso y Rover)"
+    subtitle: "Primer amartizaje controlado."
+    meta: 
+      launch: "28.03.1979 - 15:26 UTC"
+      arrival: "02.12.1971 - 13.50 UTC"
+      place: "Cráter Ptolomeo (Terra Sirenum)"
+      activity: "2 minutos (Orbitador 452 días)"
+      land: "Unión Soviética"
+      agency: "USSR"
+      status: "Exito parcial"
     position: 
       lon: 30
       lat: 15
-  - title: "jarl"
-    year: 1976 
+    goals: "
+      Realizar un amartizaje suave en Marte
+      Devolver fotografías de la superficie
+      Enviar datos de las condiciones meteorológicas, de la composición atmosférica y de las propiedades mecánicas y químicas del suelo."
+    instruments: "" 
+    curiosities: ""
+    contribution: ""
+    picture: ""
+
+  - # 4 - MARS 3 (Módulo de descenso y Rover)
+    id: 4
+    title: "MARS 3 (Módulo de descenso y Rover)"
+    subtitle: "Primer amartizaje controlado."
+    meta: 
+      launch: "28.03.1982 - 15:26 UTC"
+      arrival: "02.12.1971 - 13.50 UTC"
+      place: "Cráter Ptolomeo (Terra Sirenum)"
+      activity: "2 minutos (Orbitador 452 días)"
+      land: "Unión Soviética"
+      agency: "USSR"
+      status: "Exito parcial"
     position: 
       lon: 70
       lat: 70
-  - title: "jarl"
-    year: 1976 
+    goals: "
+      Realizar un amartizaje suave en Marte
+      Devolver fotografías de la superficie
+      Enviar datos de las condiciones meteorológicas, de la composición atmosférica y de las propiedades mecánicas y químicas del suelo."
+    instruments: "" 
+    curiosities: ""
+    contribution: ""
+    picture: ""
+
+  - # 5 - MARS 3 (Módulo de descenso y Rover)
+    id: 5
+    title: "MARS 3 (Módulo de descenso y Rover)"
+    subtitle: "Primer amartizaje controlado."
+    meta: 
+      launch: "28.03.1984 - 15:26 UTC"
+      arrival: "02.12.1971 - 13.50 UTC"
+      place: "Cráter Ptolomeo (Terra Sirenum)"
+      activity: "2 minutos (Orbitador 452 días)"
+      land: "Unión Soviética"
+      agency: "USSR"
+      status: "Exito parcial"
     position: 
       lon: 60
       lat: 80
-  - title: "jarl"
-    year: 1976 
+    goals: "
+      Realizar un amartizaje suave en Marte
+      Devolver fotografías de la superficie
+      Enviar datos de las condiciones meteorológicas, de la composición atmosférica y de las propiedades mecánicas y químicas del suelo."
+    instruments: "" 
+    curiosities: ""
+    contribution: ""
+    picture: ""
+
+  - # 6 - MARS 3 (Módulo de descenso y Rover)
+    id: 6
+    title: "MARS 3 (Módulo de descenso y Rover)"
+    subtitle: "Primer amartizaje controlado."
+    meta: 
+      launch: "28.03.1991 - 15:26 UTC"
+      arrival: "02.12.1971 - 13.50 UTC"
+      place: "Cráter Ptolomeo (Terra Sirenum)"
+      activity: "2 minutos (Orbitador 452 días)"
+      land: "Unión Soviética"
+      agency: "USSR"
+      status: "Exito parcial"
     position: 
       lon: 67
       lat: 54
-  - title: "jarl"
-    year: 1976 
+    goals: "
+      Realizar un amartizaje suave en Marte
+      Devolver fotografías de la superficie
+      Enviar datos de las condiciones meteorológicas, de la composición atmosférica y de las propiedades mecánicas y químicas del suelo."
+    instruments: "" 
+    curiosities: ""
+    contribution: ""
+    picture: ""
+
+  - # 7 - MARS 3 (Módulo de descenso y Rover)
+    id: 7
+    title: "MARS 3 (Módulo de descenso y Rover)"
+    subtitle: "Primer amartizaje controlado."
+    meta: 
+      launch: "28.03.1994 - 15:26 UTC"
+      arrival: "02.12.1971 - 13.50 UTC"
+      place: "Cráter Ptolomeo (Terra Sirenum)"
+      activity: "2 minutos (Orbitador 452 días)"
+      land: "Unión Soviética"
+      agency: "USSR"
+      status: "Exito parcial"
     position: 
       lon: 50
       lat: 52
-
+    goals: "
+      Realizar un amartizaje suave en Marte
+      Devolver fotografías de la superficie
+      Enviar datos de las condiciones meteorológicas, de la composición atmosférica y de las propiedades mecánicas y químicas del suelo."
+    instruments: "" 
+    curiosities: ""
+    contribution: ""
+    picture: ""
