--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
     "core-js": "^3.9.1",
+    "dayjs": "^1.10.5",
     "nuxt": "^2.15.3",
     "phosphor-vue": "^1.2.1"
   },
