--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
+    "@types/animejs": "^3.1.3",
+    "animejs": "^3.2.1",
     "core-js": "^3.9.1",
     "dayjs": "^1.10.5",
     "nuxt": "^2.15.3",
-    "phosphor-vue": "^1.2.1"
+    "phosphor-vue": "^1.2.1",
+    "scrollmagic": "^2.0.8",
+    "scrollmagic-plugins": "^1.0.8"
   },
   "devDependencies": {
     "@aceforth/nuxt-optimized-images": "^1.4.0",
