--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@chakra-ui/nuxt": "^0.4.2",
     "@nuxtjs/axios": "^5.13.1",
+    "@nuxtjs/emotion": "^0.1.0",
     "@types/animejs": "^3.1.3",
     "animejs": "^3.2.1",
     "core-js": "^3.9.1",
