--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/emotion": "^0.1.0",
     "@types/animejs": "^3.1.3",
+    "@types/scrollmagic": "^2.0.2",
     "animejs": "^3.2.1",
     "core-js": "^3.9.1",
     "dayjs": "^1.10.5",
